fixed menu bug changed app loader fixed login slidedown on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -31,15 +31,22 @@ div.app-loader {
 	left: 0;
 	bottom: 0;
 	right: 0;
-	z-index: 999;
+	z-index: 9999;
 	text-align: center;
-	background-color: white;
+	background-color: $lanwarRed;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	transition: all 300ms;
+	-webkit-transition: all 300ms;
 
 	i {
-		color: $lanwarRed;
+		color: white;
+	}
+
+	&.no-load {
+		bottom: 100%;
+		z-index: 0;
 	}
 }
 
@@ -48,7 +55,7 @@ nav.navbar.navbar-default {
 	border-width: 0;
 	margin-bottom: 0;
 	background-color: $lanwarRed;
-	z-index: 10;
+	z-index: 1000;
 
 	header {
 		a.navbar-brand {
@@ -177,6 +184,10 @@ div.login-slideout {
 	left: 0;
 	right: 0;
 	z-index: 5;
+
+	@media all and (max-width: $collapseMax) {
+		top: 152px;
+	}
 
 	form {
 		margin-bottom: 0;
